<?xml version="1.0"?>
<package>
  <name>gpio_monitor</name>
  <version>0.0.1</version>
  <description>Package for interfacing robot code Raspberry Pi GPIO</description>

  <maintainer email="dcutting@umich.edu">David Cutting</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/iscumd</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
